Version 6.4.0 Released February 4, 2024

    - Update to Hibernate 6.4.1.Final.

Version 6.3.1 Released September 13, 2023

    - Add support for auto-generation of META-INF/persistence.xml.
    - Fail build if verification file is non-empty and does not exist.

Version 6.3.0 Released September 4, 2023

    - Delete the output file to ensure it actually gets (re)generated
    - Work around issue where Maven passes empty parameters as null
    - Add explicit validation-api dependency (missing from Hibernate)
    - Put dependencies on the classpath during execution
    - Add Maven enforcer to confirm the correct JDK version