@@ -1,3 +1,7 @@
+Version Next
+
+    - Allow either or both of <outputFile> or <verifyFile> to be "NONE".
+
 Version 6.4.0 Released February 4, 2024
 
     - Update to Hibernate 6.4.1.Final.
